@@ -209,6 +209,7 @@
     <Compile Include="MonoDevelop.VersionControl.Views\PatchWidget.cs" />
     <Compile Include="gtk-gui\MonoDevelop.VersionControl.Views.PatchWidget.cs" />
     <Compile Include="MonoDevelop.VersionControl.Views\PatchView.cs" />
+    <Compile Include="MonoDevelop.VersionControl.Views\DropDownBox.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Makefile.am" />
