@@ -1,5 +1,14 @@
 2010-07-07  Mike Krüger  <mkrueger@novell.com>
 
+	* Makefile.am:
+	* MonoDevelop.VersionControl.csproj:
+	* MonoDevelop.VersionControl.Views/DropDownBox.cs:
+	* MonoDevelop.VersionControl.Views/ComparisonWidget.cs: Added
+	  drop down box for the version control views (TODO:
+	  Selector).
+
+2010-07-07  Mike Krüger  <mkrueger@novell.com>
+
 	* MonoDevelop.VersionControl.Views/ComparisonWidget.cs: Fixed
 	  error in calculation.
 
